# whatsapp-linux-client

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
src/whatsapp_linux_client/: __init__.py  app.py
src/whatsapp_linux_client/data/: whatsapp-linux-client.desktop
